--- a/CVPage.html
+++ b/CVPage.html
@@ -67,7 +67,9 @@
 				<div class="InformationBox">
 
 					<H3>About Me</H1>
-					<p>Random Information</p>
+					<p>I am a software engineer who has had a large amount of experience on back-end development.
+					Recently i have started with front-end development in order to gain more experience with the 
+					whole development process.</p>
 
 				</div>
 			</div>
